feat history implemented and small fixes
