# apps/server/src/dto/ride.dto.ts
@@ -38,7 +38,7 @@ export const ConfirmRideSchema = z.object({
   customer_id: z.string().uuid(),
   origin: z.string().min(4),
   destination: z.string().min(4),
-  distance: z.string(),
+  distance: z.number(),
   duration: z.string(),
   driver: z.object({
     id: z.string(),
@@ -48,3 +48,22 @@ export const ConfirmRideSchema = z.object({
 });
 
 export class ConfirmRideDTO extends createZodDto(ConfirmRideSchema) {}
+
+const RideSchema = z.object({
+  id: z.string(),
+  date: z.string().datetime(), // Use `.datetime()` para validar um ISO 8601 datetime string
+  origin: z.string(),
+  destination: z.string(),
+  distance: z.number(),
+  duration: z.string(), // Pode ser ajustado para um formato específico, se necessário
+  driver: z.object({
+    id: z.string(),
+    name: z.string(),
+  }),
+  value: z.number(),
+});
+const ListRidesSchema = z.object({
+  customer_id: z.string(),
+  rides: z.array(RideSchema)
+})
+export class ListRidesDTO extends createZodDto(ListRidesSchema) {}
